--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,5 +13,16 @@
 
 <%= yield %>
 
+<% if user_signed_in? %>
+
+  <%= link_to 'Submit Question', new_question_path %>
+  <%= link_to 'Account', edit_user_registration_path %>
+  <%= link_to 'Sign Out', destroy_user_session_path, :method => :delete %>
+
+<% else %>
+  <%= link_to 'Sign Up', new_user_registration_path %>
+  <%= link_to 'Sign In', new_user_session_path %>
+<% end %>
+
 </body>
 </html>
