--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -21,6 +21,22 @@
           <td><%= link_to 'Destroy', question, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
+      <tr>
+        <td colspan="5">
+          <%= link_to like_question_path(question), method: :put do %>
+            Upvote
+            <%= question.get_upvotes.size %>
+          <% end %>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="5">
+          <%= link_to dislike_question_path(question), method: :put do %>
+            Downvote
+            <%= question.get_downvotes.size %>
+          <% end %>
+        </td>
+      </tr>
     <% end %>
   </tbody>
 </table>
