--- a/app/assets/stylesheets/foundation/_tools.sass
+++ b/app/assets/stylesheets/foundation/_tools.sass
@@ -17,6 +17,17 @@
   background: $c-subdue
 
 // -------------------------------------
+//   Background
+// -------------------------------------
+
+.boa
+  border: $b-border
+.bob
+  border-bottom: $b-border
+.bot
+  border-top: $b-border
+
+// -------------------------------------
 //   Display
 // -------------------------------------
 
@@ -218,6 +229,9 @@
 
 .tac
   text-align: center
+
+.tar
+  text-align: right
 
 // ----- Color ----- //
 
