--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -48,3 +48,10 @@
 // -------------------------------------
 
 // ...
+
+.is-dimmed
+  opacity: 0.6
+  transition: opacity 0.25s ease-in-out
+
+  .has-dimmed:hover &
+    opacity: 1
