--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,7 @@
 <%= div_for(comment) do %>
-  <div class="comments_wrapper clearfix">
+  <div class="comments_wrapper clearfix pbm ptm">
     <div class="pull-left">
-      <p class="lead"><%= comment.body %></p>
+      <p class="lead tfh"><%= comment.body %></p>
       <p><small>Submitted <strong><%= time_ago_in_words(comment.created_at) %> ago</strong> by <%= comment.user.first_name %> <%= comment.user.last_name %></small></p>
     </div>
 
